Fixes, flexbox overflowing,  cleaner code in views

--- a/static/css/template_download_style.css
+++ b/static/css/template_download_style.css
@@ -6,6 +6,7 @@ body, html {
     background-size: 800% 800%;
 	  animation: gradient 15s ease infinite;
     overflow: auto;
+    overflow-x: hidden;
   }
   
   * {
@@ -67,7 +68,7 @@ body, html {
 
   @media screen and (min-width: 2048px) {
     .first-container, .second-container {
-      zoom: 200%;
+      zoom: 175%!important;
     }
 
     .nav-link {
@@ -270,10 +271,10 @@ body, html {
     color: #fff;
   }
 
-  .main_container {
-    height: calc(100% - 90px);;
+  .full_site_container {
+    height: 100%!important;
   }
-  
+
 
 
 
