--- a/static/css/template_style.css
+++ b/static/css/template_style.css
@@ -101,16 +101,26 @@ body, html {
     #main-title {
       font-size: 4rem!important;
     }
+
+    .full_site_container {
+      height: calc(200% + 48px + 111px);
+    }
   }
 
   @media screen and (min-width: 1200px) {
     #main_form, #result_form {
-        width: 50%;
+      width: 50%;
     }  
 
     .slider_info {
       margin-bottom: 6rem!important;
     }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    #main_form, #result_form {
+      width: 75%;
+    }  
   }
 
   @media screen and (min-width: 997px) and (max-width: 2048px){
@@ -120,6 +130,10 @@ body, html {
 
     #main-title {
       font-size: 2.5rem!important;
+    }
+
+    .full_site_container {
+      height: calc(200% + 48px + 90px);
     }
   }
 
@@ -138,6 +152,10 @@ body, html {
 
     hr {
       width: 75%!important;
+    }
+
+    .full_site_container {
+      height: calc(200% + 48px + 62px);
     }
   }
 
@@ -288,3 +306,5 @@ body, html {
   .dropdown-item {
     border-radius: 15px!important;
   }
+
+
